--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         .carousel-caption {
             display: none;
         }
+        .carousel-inner{
+        height:auto;
+        }
     }
     @media screen and (max-width: 768px) {
         .col-sm-4 {
